# modern-software-dev-assignments

./: pyproject.toml
.trunk/: trunk.yaml
lectures/week2/: ENHANCEMENT_DESIGN_PLAN.md  README.md  coding_agent_from_scratch_lecture.py  simple_mcp.py
lectures/week2/code/: .mcp.json  README.md  mcp_server.py  pyproject.toml
lectures/week3/: design_doc_template.md
week1/: assignment.md  chain_of_thought.py  k_shot_prompting.py  rag.py  reflexion.py  self_consistency_prompting.py  tool_calling.py
week2/: implementation_plan.md
week2/app/services/: extract.py
week3/: .env.example  .gitignore  README.md  implementation.md  pyproject.toml  research.md  research2.md
week3/server/: __init__.py  gmail_client.py  logger.py  main.py  resilience.py  tools.py
week3/tests/: __init__.py  test_gmail_client.py  test_integration.py  test_tools.py
week4/: CLAUDE.md
week4/.claude/commands/: docs-sync.md  refactor-module.md  tests.md
week6/: Makefile  pyproject.toml  writeup.md
week6/backend/app/routers/: notes.py
week6/docs/: SECURITY_FIX_PLAN.md  Semgrep_Code_Findings_2026_01_04.csv
week7/backend/app/: models.py  schemas.py
week7/backend/app/routers/: action_items.py  notes.py
week7/backend/app/services/: extract.py
week7/backend/tests/: conftest.py  test_action_items.py  test_extract.py  test_notes.py
week7/data/: seed.sql
