[project]
name = "week6-security-demo"
version = "0.1.0"
description = "Week 6 Security Assignment - Note Taking App with Vulnerabilities"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy>=2.0.0",
    "pydantic>=2.0.0",
    "requests>=2.32.0",
    "PyYAML>=6.0.1",
    "Jinja2>=3.1.3",
    "MarkupSafe>=2.1.5",
    "Werkzeug>=3.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
    "black>=24.1.0",
    "ruff>=0.4.0",
]

[tool.uv]
package = false
